updated main css to fix overflow issues

--- a/WebContent/resources/css/main.css
+++ b/WebContent/resources/css/main.css
@@ -3,7 +3,7 @@ body{
 }
 
 #body{
-	overflow: scroll;
+	
 }
 
 #header div{
@@ -38,6 +38,6 @@ body{
 }
 
 .wrap{
-	margin-left: 100px;
-	margin-right:100px;
+	margin: auto;
+	width: 90%;
 }
